--- a/css/s.css
+++ b/css/s.css
@@ -1,8 +1,34 @@
 @font-face {
-    font-family: Against;
-    src: url(font/against.otf);
+  font-family: 'Againts';
+  src: url('fonts/Againts.eot') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: 'Againts';
+  src:  url('fonts/againts.otf')  format('opentype'),
+  url('fonts/Againts.woff') format('woff'), 
+  url('fonts/Againts.ttf')  format('truetype'), 
+  url('Againts.svg#Againts') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+body{
+  font: normal 15px / 28px "Work Sans", Helvetica, Arial, Verdana, sans-serif;
+  word-spacing: normal;
+  background: #333;
+  max-height: 100vh;
+  max-width: 100vw;
+}
+
+img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
 #container {
   position: relative;
   height: 100vh;
@@ -12,17 +38,28 @@
   align-items: center;
 }
 
-.logo {
-  font-family: "Against";
-  color: white;
-  font-size:5em;
+.logo, .logoShade {
+  font-family: 'Againts';
+  letter-spacing: 6px;
+  color: #eceff1;
+  font-size:10em;
   display: block;
   position: absolute;
-  height: 200px !important;
-  width: 200px !important;
 }
-.logo:after{
+.logo:after, .logoShade:after{
   content: "!";
-  color: red;
-  font-size:inherit;
+  color: #d50000;
+  font-size:1.4em;
+}
+.logoShade {
+  color: #babdbe;
+}
+.logoShade:after{
+  color: #9b0000;
+}
+.comingSoon{
+  color:#eceff1;
+  bottom: 10;
+  text-align: center;
+  width: 100%;
 }
