--- a/css/s.css
+++ b/css/s.css
@@ -8,11 +8,11 @@
 @font-face {
   font-family: 'Againts';
   src:  url('fonts/againts.otf')  format('opentype'),
-        url('fonts/Againts.eot') format('embedded-opentype')
-        url('fonts/Againts.woff') format('woff'), 
-        url('fonts/Againts.woff2') format('woff2'), 
-        url('fonts/Againts.ttf')  format('truetype'), 
-        url('Againts.svg#Againts') format('svg');
+  url('fonts/Againts.eot') format('embedded-opentype')
+  url('fonts/Againts.woff') format('woff'), 
+  url('fonts/Againts.woff2') format('woff2'), 
+  url('fonts/Againts.ttf')  format('truetype'), 
+  url('Againts.svg#Againts') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -22,24 +22,23 @@ body{
   background: #333;
   max-height: 100vh;
   max-width: 100vw;
-    cursor: pointer;
+  cursor: pointer;
 
 }
 
-img{
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
+
 #container {
   position: relative;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: url('https://picsum.photos/1920/1080?random') no-repeat fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .logo, .logoShade {
