--- a/css/s.css
+++ b/css/s.css
@@ -34,7 +34,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('https://picsum.photos/1920/1080?random') no-repeat fixed;
+  background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
