--- a/css/s.css
+++ b/css/s.css
@@ -7,15 +7,16 @@
 
 @font-face {
   font-family: 'Againts';
-  src:  url('fonts/againts.otf')  format('opentype'),
-  url('fonts/Againts.eot') format('embedded-opentype')
-  url('fonts/Againts.woff') format('woff'), 
-  url('fonts/Againts.woff2') format('woff2'), 
-  url('fonts/Againts.ttf')  format('truetype'), 
-  url('Againts.svg#Againts') format('svg');
+  src: url('Againts.eot');
+  src: url('Againts.woff2') format('woff2'),
+       url('Againts.woff') format('woff'),
+       url('Againts.ttf') format('truetype'),
+       url('Againts.svg#Againts') format('svg'),
+       url('Againts.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
+
 body{
   font: normal 15px / 28px "Work Sans", Helvetica, Arial, Verdana, sans-serif;
   word-spacing: normal;
