--- a/css/s.css
+++ b/css/s.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Againts';
-  src: url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.eot'),
-  url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.woff2') format('woff2'),
+  src: url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.eot');
+  src: url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.woff2') format('woff2'),
   url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.woff') format('woff'),
   url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.ttf') format('truetype'),
   url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.svg#againts') format('svg'),
@@ -9,6 +9,8 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
 
 body{
   font: normal 15px / 28px "Work Sans", Helvetica, Arial, Verdana, sans-serif;
@@ -26,9 +28,8 @@ body{
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
   background-repeat: no-repeat;
+  background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
