--- a/css/s.css
+++ b/css/s.css
@@ -2,7 +2,7 @@
   font-family: 'Againts';
   src: url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.eot');
   src: url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.woff2') format('woff2'),
-  url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.woff') format('woff'),
+  url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.woff') format('font-woff'),
   url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.ttf') format('truetype'),
   url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.svg#againts') format('svg'),
   url('http://www.thejumpevent.com/wp-content/themes/jump/font/againts.eot?#iefix') format('embedded-opentype');
