--- a/css/s.css
+++ b/css/s.css
@@ -1,64 +1,68 @@
 @font-face {
-  font-family: 'Againts';
-  src:	url('http://thejumpevent.com/wp-content/themes/jump/font/againts.eot');
-  src:	url('http://thejumpevent.com/wp-content/themes/jump/font/againts.ttf') format('truetype'),
-				url('http://thejumpevent.com/wp-content/themes/jump/font/againts.woff2') format('woff2'),
-  			url('http://thejumpevent.com/wp-content/themes/jump/font/againts.woff') format('woff'),
-  			url('http://thejumpevent.com/wp-content/themes/jump/font/againts.svg#againts') format('svg'),
-  			url('http://thejumpevent.com/wp-content/themes/jump/font/againts.eot?#iefix') format('embedded-opentype');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'Againts';
+	src:	url('../font/againts.eot');
+	src:	url('../font/againts.ttf') format('truetype'),
+	url('../font/againts.woff2') format('woff2'),
+	url('../font/againts.woff') format('woff'),
+	url('../font/againts.svg#againts') format('svg'),
+	url('../font/againts.eot?#iefix') format('embedded-opentype');
+	font-weight: normal;
+	font-style: normal;
 }
-
-
 
 body{
-  font: normal 15px / 28px "Work Sans", Helvetica, Arial, Verdana, sans-serif;
-  word-spacing: normal;
-  background: #333;
-  max-height: 100vh;
-  max-width: 100vw;
-  cursor: pointer;
+	font: normal 15px / 28px "Work Sans", Helvetica, Arial, Verdana, sans-serif;
+	word-spacing: normal;
+	background: #333;
+	max-height: 100vh;
+	max-width: 100vw;
+	cursor: pointer;
+
+}
+img{
 
 }
 
-
 #container {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	position: relative;
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#container img{
+	background-repeat: no-repeat;
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .logo, .logoShade {
-  font-family: 'Againts';
-  letter-spacing: 6px;
-  color: #eceff1;
-  font-size:10em;
-  display: block;
-  position: absolute;
+	font-family: 'Againts';
+	letter-spacing: 6px;
+	color: #eceff1;
+	font-size:10em;
+	display: block;
+	position: absolute;
 }
 .logo:after, .logoShade:after{
-  content: "!";
-  color: #d50000;
-  font-size:1.4em;
-  font-weight: bold;
+	content: "!";
+	color: #d50000;
+	font-size:1.4em;
+	font-weight: bold;
 }
 .logoShade {
-  color: #babdbe;
+	color: #babdbe;
 }
 .logoShade:after{
-  color: #9b0000;
+	color: #9b0000;
 }
 .comingSoon{
-  color:#eceff1;
-  bottom: 10;
-  text-align: center;
-  width: 100%;
+	color:#eceff1;
+	bottom: 10;
+	text-align: center;
+	width: 100%;
 }
